--- a/Delta Theory/00 - Translation Layer/00.0 - Reality Virtualization/00.0.0 - Virtual Substrate — Kernel Primitives/00.0.0 - Virtual Substrate — Kernel Primitives (index).md
+++ b/Delta Theory/00 - Translation Layer/00.0 - Reality Virtualization/00.0.0 - Virtual Substrate — Kernel Primitives/00.0.0 - Virtual Substrate — Kernel Primitives (index).md
@@ -6,60 +6,94 @@ tags:
   - "#function/observation"
 ---
 
-# 00.0.0 - Virtual Substrate — Kernel Primitives (meta)
+# 00.0.0 - Virtual Substrate — Kernel Primitives (index)
 
-> Core primitives that form the kernel: ∆ (difference), R(·) (embedding), ⊚ (closure), and F (form).
-> These primitives work together to enable difference to become stable structure.
-
----
-
-## Scope
-
-The kernel primitives provide the foundational operations for transforming difference into form:
-
-1. ∆ (Primitive Difference) — irreducible distinction
-2. R(·) (Relational Embedding) — contextual situation
-3. ⊚ (Stabilization/Closure) — coherence lock
-4. F (Form) — stable outcome
+> Core primitives that transform difference into stable structure through recursive operations.
 
 ---
 
-## Dual‑register mapping
+## Module Overview
 
-Map the kernel into both registers and show the bridge explicitly.
+The Virtual Substrate module provides the foundational kernel of Delta Theory:
 
-### Technical (network/computational)
+- **Core Primitives:** Four irreducible operations (∆, R(·), ⊚, F) that transform difference into form
+- **Axiom Grounding:** Direct mapping to core axioms (A1-A3) ensuring ontological consistency
+- **Control Parameters:** Constants and modulators that tune system behavior
+- **Dual-Register Design:** Both technical precision and humane understanding
 
-| Primitive | Network construct | Interface example |
-|-----------|------------------|-------------------|
-| ∆ | Event detection | `ChangeDetector` |
-| R(·) | Graph topology | `ContextGraph` |
-| ⊚ | Control loop | `SessionCloser` |
-| F | Stable session | `IdentityTracker` |
-
-### Humane (biological/relational)
-
-| Primitive | Humane construct | Example |
-|-----------|-----------------|---------|
-| ∆ | First noticing | "Something's different" |
-| R(·) | Web of relations | "How things connect" |
-| ⊚ | Habit formation | "It sticks now" |
-| F | Living pattern | "This is the shape" |
-
-### Crosswalk (bridge)
-
-| Technical term | Humane term | Ontological meaning |
-|---------------|-------------|-------------------|
-| Event | Noticing | First distinction |
-| Topology | Web | How difference sits |
-| Loop | Habit | What keeps stable |
-| Session | Pattern | Persistent form |
+These elements work together to enable difference-based recursion while maintaining both implementability and accessibility.
 
 ---
 
-## Domain Mapping
+## Content Structure
 
-Brief examples across domains showing both technical and humane angles:
+| Category | Description | Key Elements |
+|----------|-------------|--------------|
+| Core Axioms | Foundational truths | [[00.0.0.0 - Core Axioms (index)]], [[A1 — Irreducibility (axiom)]], [[A2 — Asymmetry (axiom)]], [[A3 — Recursivity (axiom)]] |
+| Kernel Primitives | Core operations | [[00.0.0.2 - Structural Primitives (index)]], [[Delta]], [[RelationalEmbedding]], [[Stabilization (Closure)]], [[Form]] |
+| Anchors & Modulators | Control parameters | [[00.0.0.1 - Anchors — Constants & Modulators (index)]], [[∇S — Structure Differentiation Gradient (Sarkisian)]], [[λV — Void Resonance Threshold (Volozhina)]], [[ψA — Awareness Phase Coherence Anchor (Aiza)]] |
+| Structural Base | Implementation foundation | [[Structure]], [[Void]], [[Awareness]] |
+
+Each component provides:
+- Technical and humane mappings
+- Axiom compliance
+- Operational semantics
+- Domain examples
+
+---
+
+## Core References
+
+Primitives:
+- [[Delta]]
+- [[RelationalEmbedding]]
+- [[Stabilization (Closure)]]
+- [[Form]]
+
+Anchors:
+- [[ε — Difference Resolution Quantum (constant)]]
+- [[π — Closure Geometry Ratio (constant)]]
+- [[e — Natural Transformation Rate (constant)]]
+- [[φ — Asymmetric Stabilization Ratio (constant)]]
+- [[c — Difference Propagation Limit (constant)]]
+
+Modulators:
+- [[∇S — Structure Differentiation Gradient (Sarkisian)]]
+- [[λV — Void Resonance Threshold (Volozhina)]]
+- [[ψA — Awareness Phase Coherence Anchor (Aiza)]]
+
+Related Modules:
+- [[00.0 - Reality Virtualization (index)]]
+- [[00.0.1 - Execution Environment — Ports & Boundaries (index)]]
+- [[00.0.2 - Coherence Orchestration — Identity & Memory (index)]]
+
+---
+
+## Implementation Notes
+
+### Canonical Flow
+
+The kernel operates in a fixed sequence:
+1. ∆ (Difference) → Initial distinction
+2. R(·) (Embedding) → Context binding
+3. ⊚ (Closure) → Stability evaluation
+4. F (Form) → Structure emergence
+
+Modulated by:
+- ∇S — Structural differentiation control
+- λV — Interface sensitivity tuning
+- ψA — Phase coherence maintenance
+
+### Axiom Compliance
+
+| Primitive | Primary axiom | Supporting axioms |
+|-----------|--------------|-------------------|
+| ∆ | A1 (Irreducibility) | A2 (Asymmetry) |
+| R(·) | A2 (Asymmetry) | A3 (Recursivity) |
+| ⊚ | A3 (Recursivity) | A1 (Irreducibility) |
+| F | All three | - |
+
+### Domain Manifestations
 
 | Domain | Technical flow | Humane flow |
 |--------|---------------|-------------|
@@ -72,53 +106,37 @@ Brief examples across domains showing both technical and humane angles:
 | Networks | Change → Route → Commit → State | Input → Path → Fix → Known |
 | Cognition | Input → Context → Memory → Concept | Notice → Link → Learn → Know |
 
----
+### Implementation Strategy
 
-## Kernel Flow
+1. **Core Flow**
+   - Start with ∆ detection
+   - Build R(·) context
+   - Establish ⊚ loops
+   - Stabilize F states
 
-The primitives form a canonical sequence:
+2. **Stability Requirements**
+   - Clear event boundaries
+   - Consistent context
+   - Reliable closure
+   - Persistent form
 
-1. ∆ (Difference) provides the initial distinction
-2. R(·) (Embedding) situates it in context
-3. ⊚ (Closure) evaluates for stability
-4. F (Form) emerges if closure succeeds
+3. **Interface Design**
+   - Event API
+   - Context API
+   - Loop API
+   - State API
 
-This flow is modulated by:
-- ∇S — controls structural differentiation
-- λV — sets interface sensitivity
-- ψA — maintains phase coherence
-
----
-
-## Axiom Mapping
-
-Each primitive expresses core axioms:
-
-| Primitive | Primary axiom | Supporting axioms |
-|-----------|--------------|-------------------|
-| ∆ | A1 (Irreducibility) | A2 (Asymmetry) |
-| R(·) | A2 (Asymmetry) | A3 (Recursivity) |
-| ⊚ | A3 (Recursivity) | A1 (Irreducibility) |
-| F | All three | - |
-
----
-
-## Design rationale
-
-The kernel primitives must be intelligible in both technical and humane registers per governance (see [PRINCIPLES.md](../../../../PRINCIPLES.md)). Each primitive maintains its dual nature without reduction to either register.
+4. **Error Handling**
+   - Detection failures
+   - Context loss
+   - Loop breaks
+   - State corruption
 
 ---
 
 ## See Also
 
+- [[00.0.0.0 - Core Axioms (index)]]
 - [[00.0.0.1 - Anchors — Constants & Modulators (index)]]
 - [[00.0.0.2 - Structural Primitives (index)]]
 - [[Structure]] · [[Void]] · [[Awareness]]
-
----
-
-## Dual‑register checklist
-
-- [x] Technical mapping provided
-- [x] Humane mapping provided
-- [x] Crosswalk table included
