--- a/Delta Theory/00 - Translation Layer/00.0 - Reality Virtualization/00.0.0 - Virtual Substrate — Kernel Primitives/00.0.0.0 - Core Axioms/00.0.0.0 - Core Axioms (index).md
+++ b/Delta Theory/00 - Translation Layer/00.0 - Reality Virtualization/00.0.0 - Virtual Substrate — Kernel Primitives/00.0.0.0 - Core Axioms/00.0.0.0 - Core Axioms (index).md
@@ -2,26 +2,72 @@
 type: meta
 tags:
   - "#layer/translation"
-  - "#status/seed"
+  - "#status/stable"
   - "#function/observation"
 ---
 
-# 00.0.0.0 - Core Axioms (meta)
+# 00.0.0.0 - Core Axioms (index)
 
-> Foundational statements that ground the kernel. These axioms constrain primitives and interfaces.
-
----
-
-## Scope
-
-- Core ontological axioms (A1-A3) that define the irreducible base
-- SVA triad mapping and constant emergence
-- Axiom dependencies and implications
-- Axiom-to-primitive mappings
+> Foundational statements that ground the kernel primitives and enable difference-based recursion.
 
 ---
 
-## SVA Triad Mapping
+## Module Overview
+
+The Core Axioms module provides the irreducible foundation of Delta Theory. It defines:
+- Three foundational axioms (A1-A3) that establish the minimal ontological base
+- Their mapping to the SVA triad (Structure, Void, Awareness)
+- The emergence of core constants (both direct and derived)
+- Guidelines for domain-specific implementations
+
+These axioms work together to enable difference-based recursion while maintaining both technical precision and humane understanding.
+
+---
+
+## Content Structure
+
+| Category | Description | Key Elements |
+|----------|-------------|--------------|
+| Core Axioms | Foundational ontological truths | [[A1 — Irreducibility (axiom)]], [[A2 — Asymmetry (axiom)]], [[A3 — Recursivity (axiom)]] |
+| SVA Mapping | Polarity and domain alignment | P0 (Awareness), P- (Void), P+ (Structure) |
+| Direct Constants | Primary emergent anchors | [[ε — Difference Resolution Quantum (constant)]], [[φ — Asymmetric Stabilization Ratio (constant)]], [[e — Natural Transformation Rate (constant)]] |
+| Derived Constants | Secondary emergent anchors | [[c — Difference Propagation Limit (constant)]], [[π — Closure Geometry Ratio (constant)]] |
+
+Each axiom provides:
+- Technical and humane mappings
+- Polarity alignment
+- Constant emergence
+- Domain examples
+
+---
+
+## Core References
+
+Primitives:
+- [[Delta]]
+- [[RelationalEmbedding]]
+- [[Stabilization (Closure)]]
+- [[Form]]
+
+Anchors (Direct):
+- [[ε — Difference Resolution Quantum (constant)]] ← A1
+- [[φ — Asymmetric Stabilization Ratio (constant)]] ← A2
+- [[e — Natural Transformation Rate (constant)]] ← A3
+
+Anchors (Emergent):
+- [[c — Difference Propagation Limit (constant)]] ← A2
+- [[π — Closure Geometry Ratio (constant)]] ← A3
+
+Related Modules:
+- [[00.0.0 - Virtual Substrate — Kernel Primitives (index)]]
+- [[00.0.0.1 - Anchors — Constants & Modulators (index)]]
+- [[00.0.0.2 - Structural Primitives (index)]]
+
+---
+
+## Implementation Notes
+
+### SVA Triad Mapping
 
 | Axiom | Polarity | Domain | Core Role |
 |-------|----------|---------|-----------|
@@ -29,68 +75,7 @@ tags:
 | A2 (Asymmetry) | P- | Void | Field directionality |
 | A3 (Recursivity) | P+ | Structure | Form-making |
 
----
-
-## Anchors & Emergence
-
-Primary constants (direct):
-- A1 → ε (resolution quantum)
-- A2 → φ (stabilization ratio)
-- A3 → e (transformation rate)
-
-Emergent constants (derived):
-- A2 → c (propagation limit)
-- A3 → π (closure geometry)
-
----
-
-## Dual‑register mapping
-
-Map the axioms into both registers and show the bridge explicitly.
-
-### Technical (network/computational)
-
-| Module concept | Network construct (Target) | Interface/API example |
-|----------------|---------------------------|----------------------|
-| Irreducibility | Atomic event              | `PrimitiveEvent`    |
-| Asymmetry      | Directed edge             | `DirectedLink`      |
-| Recursivity    | Nested closure            | `RecursiveWrapper`  |
-
-### Humane (biological/relational)
-
-| Module concept | Humane construct (Target) | Example |
-|----------------|---------------------------|---------|
-| Irreducibility | Basic sensation           | Raw perception before analysis |
-| Asymmetry      | Role/context dependence   | Parent-child vs child-parent |
-| Recursivity    | Pattern recognition       | "I see what you mean" |
-
-### Crosswalk (bridge)
-
-| Technical term | Humane term | Ontological meaning                    |
-|----------------|-------------|----------------------------------------|
-| Atomic event   | Raw sensation | Irreducible unit of difference       |
-| Directed link  | Role context  | Asymmetric embedding of difference   |
-| Nested closure | Recognition   | Recursive stabilization of patterns  |
-
----
-
-## Design rationale
-
-These axioms establish the minimal foundation needed for difference-based recursion. See [PRINCIPLES.md](../../../../../PRINCIPLES.md) for how they avoid reduction (biology ≠ networks; tech ≠ biology).
-
----
-
-## Dual‑register checklist
-
-- [x] Technical mapping provided
-- [x] Humane mapping provided
-- [x] Crosswalk table included
-
----
-
-## Domain Mapping (optional)
-
-Brief manifestations across domains, showing SVA triad alignment:
+### Domain Manifestations
 
 | Domain | Structure (A3) | Void (A2) | Awareness (A1) |
 |--------|---------------|------------|----------------|
@@ -102,6 +87,38 @@ Brief manifestations across domains, showing SVA triad alignment:
 | Politics | Institutions | Power dynamics | Cultural awareness |
 | Networks | Graph topology | Message routing | State coherence |
 | Cognition | Memory patterns | Attention flow | Conscious distinction |
+
+### Technical Implementation
+
+| Axiom | Network Construct | Interface Example |
+|-------|------------------|-------------------|
+| A1 | Atomic event | `PrimitiveEvent` |
+| A2 | Directed edge | `DirectedLink` |
+| A3 | Nested closure | `RecursiveWrapper` |
+
+### Special Considerations
+
+1. **Ontological Independence**
+   - Each axiom covers a distinct aspect
+   - No circular dependencies
+   - Clear emergence patterns
+
+2. **Dual-Register Grounding**
+   - Technical precision without reduction
+   - Humane understanding without loss
+   - Clear bridging principles
+
+3. **Constant Emergence**
+   - Direct constants from single axioms
+   - Emergent constants from interactions
+   - Clear derivation paths
+
+4. **Domain Flexibility**
+   - Scale-aware manifestation
+   - Domain-specific interpretation
+   - Consistent core meaning
+
+See [PRINCIPLES.md](../../../../../PRINCIPLES.md) for how they avoid reduction (biology ≠ networks; tech ≠ biology).
 
 ---
 
