--- a/Delta Theory/00 - Translation Layer/00.0 - Reality Virtualization/00.0.0 - Virtual Substrate — Kernel Primitives/00.0.0.1 - Anchors — Constants & Modulators/00.0.0.1 - Anchors — Constants & Modulators (index).md
+++ b/Delta Theory/00 - Translation Layer/00.0 - Reality Virtualization/00.0.0 - Virtual Substrate — Kernel Primitives/00.0.0.1 - Anchors — Constants & Modulators/00.0.0.1 - Anchors — Constants & Modulators (index).md
@@ -8,58 +8,61 @@ tags:
 
 # 00.0.0.1 - Anchors — Constants & Modulators (index)
 
-> Canonical anchors: numeric constants and SVA modulators that stabilize the kernel across domains.
+> Canonical anchors that stabilize the kernel: core constants (ε, π, e, φ, c) and SVA modulators (∇S, λV, ψA).
 
 ---
 
-## Scope
+## Module Overview
 
-Group **constants** (ε, π, e, φ, c) and **modulators** (∇S, λV, ψA) that anchor the kernel across domains.
+This module defines the fundamental anchors that stabilize Delta Theory across domains:
 
----
+- **Core Constants:** Five irreducible numbers (ε, π, e, φ, c) that emerge from axioms
+- **SVA Modulators:** Three control parameters (∇S, λV, ψA) that tune system behavior
+- **Emergence Patterns:** How constants arise from axioms and interact
+- **Domain Mappings:** How anchors manifest in specific fields
 
-## Anchors & Emergence
-
-Constants emerge from core axioms:
-
-| Axiom | Primary constant | Emergent constant |
-|-------|-----------------|------------------|
-| A1 (Irreducibility) | ε (quantum) | - |
-| A2 (Asymmetry) | φ (bias) | c (limit) |
-| A3 (Recursivity) | e (rate) | π (closure) |
+These anchors work together to provide stable reference points for both technical implementation and humane understanding.
 
 ---
 
-## Dual‑register mapping
+## Content Structure
 
-Map the anchors into both registers and show the bridge explicitly.
+| Category | Description | Key Elements |
+|----------|-------------|--------------|
+| Core Constants | Primary numeric anchors | [[ε — Difference Resolution Quantum (constant)]], [[π — Closure Geometry Ratio (constant)]], [[e — Natural Transformation Rate (constant)]], [[φ — Asymmetric Stabilization Ratio (constant)]], [[c — Difference Propagation Limit (constant)]] |
+| SVA Modulators | Control parameters | [[∇S — Structure Differentiation Gradient (Sarkisian)]], [[λV — Void Resonance Threshold (Volozhina)]], [[ψA — Awareness Phase Coherence Anchor (Aiza)]] |
+| Axiom Emergence | Source relationships | A1 → ε, A2 → {φ, c}, A3 → {e, π} |
+| Domain Instances | Field-specific versions | Physics (α, ħ, k_B), Biology (rates, capacities), Networks (limits, bounds) |
 
-### Technical (network/computational)
-
-| Anchor type | Network construct | Interface example |
-|------------|------------------|-------------------|
-| Constants | Model parameters | `MIN_STEP`, `MAX_RATE` |
-| Modulators | Control knobs | `DepthControl`, `GatePolicy` |
-
-### Humane (biological/relational)
-
-| Anchor type | Humane construct | Example |
-|------------|------------------|---------|
-| Constants | Natural limits | "Smallest we can notice" |
-| Modulators | Living rhythms | "How ready we feel" |
-
-### Crosswalk (bridge)
-
-| Technical term | Humane term | Ontological meaning |
-|---------------|-------------|-------------------|
-| Parameter | Natural limit | What bounds difference |
-| Control knob | Living rhythm | How difference flows |
+Each anchor provides:
+- Technical and humane mappings
+- Emergence patterns
+- Domain manifestations
+- Implementation guidelines
 
 ---
 
-## Domain Mapping
+## Implementation Notes
 
-Brief examples across domains showing both technical and humane angles:
+### Constants Table
+
+| Constant | Role | Technical aspect | Humane aspect |
+|----------|------|-----------------|---------------|
+| ε | Minimal quantum | Precision limit | Smallest care |
+| π | Closure ratio | Cycle completion | Natural rhythm |
+| e | Growth rate | Update frequency | Life's tempo |
+| φ | Bias ratio | Resource split | Fair sharing |
+| c | Speed limit | Channel capacity | Integration pace |
+
+### Modulators Table
+
+| Modulator | Polarity | Technical aspect | Humane aspect |
+|-----------|----------|-----------------|---------------|
+| ∇S | P+ | Partitioning depth | Boundary clarity |
+| λV | P- | Gate threshold | Readiness state |
+| ψA | P0 | Phase coherence | Shared rhythm |
+
+### Domain Manifestations
 
 | Domain | Constants manifest as | Modulators manifest as |
 |--------|---------------------|----------------------|
@@ -72,52 +75,22 @@ Brief examples across domains showing both technical and humane angles:
 | Networks | System limits | Control planes |
 | Cognition | Memory bounds | Attention gates |
 
----
+### Placement Guidelines
 
-## Constants — Core Five
+1. **Core Anchors**
+   - Constants and modulators defined here
+   - Full technical/humane mappings
+   - Clear emergence patterns
 
-| Constant | Role | Technical aspect | Humane aspect |
-|----------|------|-----------------|---------------|
-| [[ε — Difference Resolution Quantum (constant)\|ε]] | Minimal quantum | Precision limit | Smallest care |
-| [[π — Closure Geometry Ratio (constant)\|π]] | Closure ratio | Cycle completion | Natural rhythm |
-| [[e — Natural Transformation Rate (constant)\|e]] | Growth rate | Update frequency | Life's tempo |
-| [[φ — Asymmetric Stabilization Ratio (constant)\|φ]] | Bias ratio | Resource split | Fair sharing |
-| [[c — Difference Propagation Limit (constant)\|c]] | Speed limit | Channel capacity | Integration pace |
+2. **Domain Instances**
+   - Live in respective domains
+   - Link back to core anchors
+   - Preserve structural roles
 
----
-
-## Modulators — SVA Triad
-
-| Modulator | Polarity | Technical aspect | Humane aspect |
-|-----------|----------|-----------------|---------------|
-| [[∇S — Structure Differentiation Gradient (Sarkisian)\|∇S]] | P+ | Partitioning depth | Boundary clarity |
-| [[λV — Void Resonance Threshold (Volozhina)\|λV]] | P- | Gate threshold | Readiness state |
-| [[ψA — Awareness Phase Coherence Anchor (Aiza)\|ψA]] | P0 | Phase coherence | Shared rhythm |
-
----
-
-## Placement Policy
-
-1. Core constants and modulators live here
-2. Domain-specific instances live in their domains:
-   - Physics: `α`, `ħ`, `k_B`, etc.
-   - Biology: growth rates, carrying capacities
-   - Networks: throughput limits, latency bounds
-3. Link from here, don't duplicate
-
----
-
-## Non-core Candidates
-
-Mathematical invariants (reference only):
-- Euler characteristic (χ)
-- Tetrahedral factor (τ∆)
-- Topological indices
-
-Domain physics examples:
-- [[c — Speed of Light in Vacuum (constant)|c — Physics instance]]
-- [[ħ — Reduced Planck Constant (constant)|ħ]]
-- [[k_B — Boltzmann Constant (constant)|k_B]]
+3. **Implementation Strategy**
+   - Start with core constants
+   - Add modulators as needed
+   - Maintain dual-register clarity
 
 ---
 
@@ -126,11 +99,3 @@ Domain physics examples:
 - [[00.0.0 - Virtual Substrate — Kernel Primitives (index)]]
 - [[Structure]] · [[Void]] · [[Awareness]]
 - [[20.1.1 - Schemas & Conventions (index)]]
-
----
-
-## Dual‑register checklist
-
-- [x] Technical mapping provided
-- [x] Humane mapping provided
-- [x] Crosswalk table included
