--- a/Delta Theory/20 - Informational Layer/20.0 - Symbolic Structure/20.0 - Symbolic Structure (index).md
+++ b/Delta Theory/20 - Informational Layer/20.0 - Symbolic Structure/20.0 - Symbolic Structure (index).md
@@ -6,34 +6,83 @@ tags:
   - "#function/observation"
 ---
 
-# 20.0 - Symbolic Structure (meta)
+# 20.0 - Symbolic Structure (index)
 
 > Hosts canonical terminology and symbols for Delta Theory.
 
 ---
 
-## Purpose
+## Module Overview
 
-Define and stabilize vocabulary (e.g., [[Field]], [[Void]], [[Structure]], [[Awareness]]) for consistent use across the vault.
-
----
-
-## Modules
-
-- **20.0.0 - Glossary** — glossary entries with aliases and ontological roles
+This module provides the foundational vocabulary and symbolic framework for Delta Theory:
+- Defines core terminology and relationships
+- Establishes diagnostic classifications
+- Maintains semantic consistency
+- Bridges technical and experiential understanding
 
 ---
 
-## Authoring Guidelines
+## Content Structure
 
+| Category | Description | Key Elements |
+|----------|-------------|--------------|
+| Glossary | Core terms and concepts | [[Field]], [[Void]], [[Structure]], [[Awareness]] |
+| Form Classifications | Observable structure patterns | [[Stable Form]], [[Apparent Form]], [[Collapsed Form]] |
+| Field Classifications | Observable void patterns | [[Transparent Field]], [[Masked Field]], [[Saturated Field]] |
+| Awareness Classifications | Observable cognition patterns | [[Coherent Awareness]], [[Desynchronized Awareness]] |
+| Propagation Patterns | Flow and connection types | [[Path (chain)]], [[Multi-path]], [[Cycle]] |
+| Interaction Dynamics | Interface behaviors | [[Resonance]], [[Interference]], [[Harmony]] |
+| Stability Diagnostics | System health measures | [[Stability Margin]], [[Robustness]], [[Resilience]] |
+| Structural Relations | Connection properties | [[Adjacency]], [[Containment]], [[Bridge]] |
+| Ontological States | Interface conditions | [[Ontologically Connected]], [[Ontologically Disconnected]] |
+
+---
+
+## Core References
+
+Primitives:
+- [[Delta]]
+- [[RelationalEmbedding]]
+- [[Stabilization (Closure)]]
+- [[Form]]
+
+Anchors:
+- [[ε — Difference Resolution Quantum (constant)]]
+- [[π — Closure Geometry Ratio (constant)]]
+- [[e — Natural Transformation Rate (constant)]]
+- [[φ — Asymmetric Stabilization Ratio (constant)]]
+- [[c — Difference Propagation Limit (constant)]]
+
+Modulators:
+- [[∇S — Structure Differentiation Gradient (Sarkisian)]]
+- [[λV — Void Resonance Threshold (Volozhina)]]
+- [[ψA — Awareness Phase Coherence Anchor (Aiza)]]
+
+Related Modules:
+- [[20 - Informational Layer (index)]]
+- [[20.1 - Semantic Interfaces (index)]]
+- [[20.3 - Reflective Maps & Cultural Flows (index)]]
+
+---
+
+## Implementation Notes
+
+### Authoring Guidelines
 - Keep entries concise with Definition, Ontological Role, Comparisons, and Related Terms
 - Use aliases for plural/common variants
+- Maintain dual-register mapping (technical and humane)
+- Include scale effects where relevant
 
-### Ontology vs Diagnostics (clarification)
-
+### Ontology vs Diagnostics
 - Ontological axes: **Structure**, **Void**, **Awareness** (S/V/A)
-- Observational diagnostics: **Form** (observable Structure), **Field** (observable Void), **Awareness** (already operational as phase/identity)
-- Use “Cognition” only as a domain instance of Awareness, not as a kernel term
+- Observational diagnostics: **Form** (observable Structure), **Field** (observable Void), **Awareness** (already operational)
+- Use "Cognition" only as a domain instance of Awareness
+
+### Special Considerations
+- Maintain consistent terminology across layers
+- Preserve dual-register intelligibility
+- Support scale-aware manifestation
+- Enable clear traceability
 
 ---
 
@@ -41,3 +90,4 @@ Define and stabilize vocabulary (e.g., [[Field]], [[Void]], [[Structure]], [[Awa
 
 - [[20 - Informational Layer (index)]]
 - [[tags]]
+- [[types]]
