--- a/Delta Theory/20 - Informational Layer/20.0 - Symbolic Structure/20.0.0 - Glossary/20.0.0 - Glossary (index).md
+++ b/Delta Theory/20 - Informational Layer/20.0 - Symbolic Structure/20.0.0 - Glossary/20.0.0 - Glossary (index).md
@@ -1,52 +1,63 @@
----
-type: meta
-tags:
-  - "#layer/information"
-  - "#status/stable"
-  - "#function/observation"
----
-
-# 20.0.0 - Glossary (meta)
+# 20.0.0 - Glossary (index)
 
 > Canonical concept definitions with dual-register mapping and recursive examples.
-> Each term maintains both technical precision and humane understanding.
 
 ---
 
-## Scope
+## Module Overview
 
-Document core terms that:
-1. Define derived concepts
-2. Bridge technical and humane registers
-3. Show recursive manifestations
-4. Support formal expression
+The Glossary provides stable definitions for all derived concepts in Delta Theory:
+- Maintains both technical precision and humane understanding
+- Shows recursive manifestations across scales
+- Supports formal expression and implementation
+- Bridges between registers and domains
 
-Note: Primitives are defined in [[00.0.0 - Virtual Substrate — Kernel Primitives (index)]].
-
----
-
-## Core Terms
-
-### Polarities
-- [[Structure]] (P+)
-- [[Void]] (P-)
-- [[Awareness]] (P0)
-
-### Recursive Concepts
-- [[Field]]
-- [[Relation]]
-- [[Closure]]
-- [[Fixed Point]]
-- [[Recursive Depth]]
-- [[Recurrence Interval]]
-
-### Boundary Cases
-- [[Zero]]
-- [[Infinite]]
+Note: Core primitives are defined in [[00.0.0 - Virtual Substrate — Kernel Primitives (index)]].
 
 ---
 
-## Templates
+## Content Structure
+
+| Category | Description | Key Elements |
+|----------|-------------|--------------|
+| Core Polarities | Primary aspects | [[Structure]] (P+), [[Void]] (P-), [[Awareness]] (P0) |
+| Recursive Concepts | Scale-aware terms | [[Field]], [[Form]], [[Relation]], [[Memory]] |
+| Boundary Cases | Edge conditions | [[Zero]], [[Infinite]], [[Fixed Point]], [[Recurrence Interval]] |
+| Diagnostic Terms | Observable properties | [[Stability]], [[Coherence]], [[Resolution]], [[Phase]] |
+
+Each term provides:
+- Technical and humane definitions
+- Scale manifestations
+- Domain examples
+- Usage guidance
+
+---
+
+## Implementation Notes
+
+### Term Categories
+
+1. **Core Polarities**
+   - Structure (form-making)
+   - Void (field/environment)
+   - Awareness (cognitive/time)
+
+2. **Recursive Concepts**
+   - Scale-aware definitions
+   - Cross-domain examples
+   - Bridge mappings
+
+3. **Boundary Cases**
+   - Edge conditions
+   - Limit behaviors
+   - Special handling
+
+4. **Diagnostic Terms**
+   - Observable properties
+   - Measurable aspects
+   - Test conditions
+
+### Templates
 
 Use these templates for new entries:
 - [[glossary]] - Base template for most terms
