--- a/Delta Theory/20 - Informational Layer/20.0 - Symbolic Structure/20.0.5 - Interaction Dynamics/20.0.5 - Interaction Dynamics (index).md
+++ b/Delta Theory/20 - Informational Layer/20.0 - Symbolic Structure/20.0.5 - Interaction Dynamics/20.0.5 - Interaction Dynamics (index).md
@@ -2,7 +2,7 @@
 type: index
 tags:
   - "#layer/information"
-  - "#status/seed"
+  - "#status/stable"
   - "#function/observation"
 ---
 
@@ -12,23 +12,46 @@ tags:
 
 ---
 
-## Dynamics
+## Dynamics Framework
 
-| Dynamic | One‑liner |
-|---|---|
-| [[Resonance (dynamic)]] | Constructive phase alignment; amplification within safe windows |
-| [[Interference (dynamic)]] | Constructive/destructive mixing based on phase relations |
-| [[Harmony (dynamic)]] | Aggregate coherence across components; aligns without rigidity |
-| [[Dissonance (dynamic)]] | Persistent phase conflict/tension; useful or destructive |
+| Dynamic | Description | Key Diagnostic |
+|---------|-------------|----------------|
+| [[Resonance (dynamic)]] | Phase alignment | Amplification control |
+| [[Interference (dynamic)]] | Phase mixing | Pattern stability |
+| [[Harmony (dynamic)]] | Component coherence | Flexible alignment |
+| [[Dissonance (dynamic)]] | Phase tension | Productive conflict |
+
+Each dynamic provides:
+- Technical and humane diagnostic criteria
+- Scale-dependent manifestations
+- Phase behavior patterns
+- Stability conditions
 
 Note: Jamming/Saturation is covered under [[Saturated Field (classification)]].
 
 ---
 
-## See Also
+## Core References
 
-- Propagation: [[20.0.4 - Propagation Patterns (index)]]
-- Diagnostics: [[20.0.1 - Form Classifications (index)]] · [[20.0.2 - Field Classifications (index)]] · [[20.0.3 - Awareness Classifications (index)]]
-- Anchors: [[ε — Difference Resolution Quantum (constant)]], [[π — Closure Geometry Ratio (constant)]], [[e — Natural Transformation Rate (constant)]], [[φ — Asymmetric Stabilization Ratio (constant)]], [[c — Difference Propagation Limit (constant)]]
-- Modulators: [[∇S — Structure Differentiation Gradient (Sarkisian)]], [[λV — Void Resonance Threshold (Volozhina)]], [[ψA — Awareness Phase Coherence Anchor (Aiza)]]
+Primitives:
+- [[Form]]
+- [[Field]]
+- [[Structure]]
 
+Anchors:
+- [[ε — Difference Resolution Quantum (constant)]]
+- [[π — Closure Geometry Ratio (constant)]]
+- [[e — Natural Transformation Rate (constant)]]
+- [[φ — Asymmetric Stabilization Ratio (constant)]]
+- [[c — Difference Propagation Limit (constant)]]
+
+Modulators:
+- [[∇S — Structure Differentiation Gradient (Sarkisian)]]
+- [[λV — Void Resonance Threshold (Volozhina)]]
+- [[ψA — Awareness Phase Coherence Anchor (Aiza)]]
+
+Related Patterns:
+- [[20.0.4 - Propagation Patterns (index)]]
+- [[20.0.1 - Form Classifications (index)]]
+- [[20.0.2 - Field Classifications (index)]]
+- [[20.0.3 - Awareness Classifications (index)]]
