--- a/Delta Theory/20 - Informational Layer/20.0 - Symbolic Structure/20.0.6 - Stability Diagnostics/20.0.6 - Stability Diagnostics (index).md
+++ b/Delta Theory/20 - Informational Layer/20.0 - Symbolic Structure/20.0.6 - Stability Diagnostics/20.0.6 - Stability Diagnostics (index).md
@@ -2,7 +2,7 @@
 type: index
 tags:
   - "#layer/information"
-  - "#status/seed"
+  - "#status/stable"
   - "#function/observation"
 ---
 
@@ -12,27 +12,54 @@ tags:
 
 ---
 
-## Diagnostics
+## Diagnostic Framework
 
-| Diagnostic | One‑liner |
-|---|---|
-| [[Stability Margin (diagnostic)]] | Combined reserve across ε/ψA/λV/c preventing collapse |
-| [[Robustness (diagnostic)]] | Tolerates bounded shocks without losing Form |
-| [[Resilience (diagnostic)]] | Time to return near fixed point after disturbance |
-| [[Metastability (diagnostic)]] | Stable within a window; likely transition under slow drift |
-| [[Brittleness (diagnostic)]] | Small perturbations trigger fragmentation/collapse |
-| [[Hysteresis (diagnostic)]] | Separate on/off thresholds (λV) prevent thrash |
-| [[Basin of Attraction (diagnostic)]] | Region that converges to a Form under ⊚ |
-| [[Capacity Margin (diagnostic)]] | Distance to saturation (c) |
-| [[Resolution Margin (diagnostic)]] | Distance to ε (under‑resolution risk) |
-| [[Phase Margin (diagnostic)]] | ψA coherence reserve |
+| Diagnostic | Description | Key Test |
+|------------|-------------|----------|
+| [[Stability Margin (diagnostic)]] | Combined reserves | Multi-factor safety |
+| [[Robustness (diagnostic)]] | Shock tolerance | Form retention |
+| [[Resilience (diagnostic)]] | Recovery speed | Return time |
+| [[Metastability (diagnostic)]] | Window stability | Drift risk |
+| [[Brittleness (diagnostic)]] | Fragility level | Break point |
+| [[Hysteresis (diagnostic)]] | Threshold gap | Switch stability |
+| [[Basin of Attraction (diagnostic)]] | Convergence zone | Pull strength |
+| [[Capacity Margin (diagnostic)]] | Load headroom | Peak handling |
+| [[Resolution Margin (diagnostic)]] | Signal clarity | Detail risk |
+| [[Phase Margin (diagnostic)]] | Sync reserve | Lock strength |
+| [[Closure Strength (diagnostic)]] | Form integrity | Shape hold |
+| [[Buffer Allocation Policy (diagnostic)]] | Resource rules | Share balance |
+| [[Inertia (diagnostic)]] | Change resistance | Move effort |
+
+Each diagnostic provides:
+- Technical and humane test criteria
+- Scale-dependent manifestations
+- Stability behavior patterns
+- Recovery conditions
 
 ---
 
-## See Also
+## Core References
 
-- Form: [[20.0.1 - Form Classifications (index)]] · Field: [[20.0.2 - Field Classifications (index)]] · Awareness: [[20.0.3 - Awareness Classifications (index)]]
-- Propagation: [[20.0.4 - Propagation Patterns (index)]] · Dynamics: [[20.0.5 - Interaction Dynamics (index)]]
-- Anchors: [[ε — Difference Resolution Quantum (constant)]], [[π — Closure Geometry Ratio (constant)]], [[e — Natural Transformation Rate (constant)]], [[φ — Asymmetric Stabilization Ratio (constant)]], [[c — Difference Propagation Limit (constant)]]
-- Modulators: [[∇S — Structure Differentiation Gradient (Sarkisian)]], [[λV — Void Resonance Threshold (Volozhina)]], [[ψA — Awareness Phase Coherence Anchor (Aiza)]]
+Primitives:
+- [[Form]]
+- [[Field]]
+- [[Structure]]
 
+Anchors:
+- [[ε — Difference Resolution Quantum (constant)]]
+- [[π — Closure Geometry Ratio (constant)]]
+- [[e — Natural Transformation Rate (constant)]]
+- [[φ — Asymmetric Stabilization Ratio (constant)]]
+- [[c — Difference Propagation Limit (constant)]]
+
+Modulators:
+- [[∇S — Structure Differentiation Gradient (Sarkisian)]]
+- [[λV — Void Resonance Threshold (Volozhina)]]
+- [[ψA — Awareness Phase Coherence Anchor (Aiza)]]
+
+Related Patterns:
+- [[20.0.1 - Form Classifications (index)]]
+- [[20.0.2 - Field Classifications (index)]]
+- [[20.0.3 - Awareness Classifications (index)]]
+- [[20.0.4 - Propagation Patterns (index)]]
+- [[20.0.5 - Interaction Dynamics (index)]]
