--- a/Delta Theory/20 - Informational Layer/20.0 - Symbolic Structure/20.0.7 - Structural Relations/20.0.7 - Structural Relations (index).md
+++ b/Delta Theory/20 - Informational Layer/20.0 - Symbolic Structure/20.0.7 - Structural Relations/20.0.7 - Structural Relations (index).md
@@ -2,7 +2,7 @@
 type: index
 tags:
   - "#layer/information"
-  - "#status/seed"
+  - "#status/stable"
   - "#function/observation"
 ---
 
@@ -12,22 +12,50 @@ tags:
 
 ---
 
-## Relations
+## Relations Framework
 
-| Relation | One‑liner |
-|---|---|
-| [[Adjacency / Incidence (relation)]] | Which interfaces touch; direct interaction possible |
-| [[Containment / Embedding (relation)]] | Part‑of / scope nesting; R(·) depth/context |
-| [[Equivalence / Isomorphism (relation)]] | Same structure under relabeling; functional sameness |
-| [[Dependency / Constraint (relation)]] | Requires/provides; gating and ordering |
-| [[Compatibility / Conflict (relation)]] | Can co‑bind without interference vs tension |
-| [[Symmetry / Asymmetry (relation)]] | Invariance vs directed bias across interactions |
-| [[Bridge / Articulation (relation)]] | Critical connector between regions |
+| Relation | Description | Key Test |
+|----------|-------------|----------|
+| [[Adjacency : Incidence (relation)]] | Interface touch | Contact check |
+| [[Containment : Embedding (relation)]] | Scope nesting | Part-of test |
+| [[Equivalence : Isomorphism (relation)]] | Structure same | Map check |
+| [[Dependency : Constraint (relation)]] | Need/provide | Gate test |
+| [[Compatibility : Conflict (relation)]] | Co-bind check | Tension test |
+| [[Symmetry : Asymmetry (relation)]] | Balance/bias | Direction test |
+| [[Bridge : Articulation (relation)]] | Critical link | Connect test |
+| [[Ribbed Relational Embedding (property)]] | Layered nest | Level test |
+
+Each relation provides:
+- Technical and humane test criteria
+- Scale-dependent manifestations
+- Relation behavior patterns
+- Stability conditions
 
 ---
 
-## See Also
+## Core References
 
-- Propagation: [[20.0.4 - Propagation Patterns (index)]] · Dynamics: [[20.0.5 - Interaction Dynamics (index)]]
-- Diagnostics: [[20.0.1 - Form Classifications (index)]] · [[20.0.2 - Field Classifications (index)]] · [[20.0.3 - Awareness Classifications (index)]] · [[20.0.6 - Stability Diagnostics (index)]]
+Primitives:
+- [[Form]]
+- [[Field]]
+- [[Structure]]
 
+Anchors:
+- [[ε — Difference Resolution Quantum (constant)]]
+- [[π — Closure Geometry Ratio (constant)]]
+- [[e — Natural Transformation Rate (constant)]]
+- [[φ — Asymmetric Stabilization Ratio (constant)]]
+- [[c — Difference Propagation Limit (constant)]]
+
+Modulators:
+- [[∇S — Structure Differentiation Gradient (Sarkisian)]]
+- [[λV — Void Resonance Threshold (Volozhina)]]
+- [[ψA — Awareness Phase Coherence Anchor (Aiza)]]
+
+Related Patterns:
+- [[20.0.1 - Form Classifications (index)]]
+- [[20.0.2 - Field Classifications (index)]]
+- [[20.0.3 - Awareness Classifications (index)]]
+- [[20.0.4 - Propagation Patterns (index)]]
+- [[20.0.5 - Interaction Dynamics (index)]]
+- [[20.0.6 - Stability Diagnostics (index)]]
