--- a/Delta Theory/20 - Informational Layer/20.0 - Symbolic Structure/20.0.8 - Ontological States/20.0.8 - Ontological States (index).md
+++ b/Delta Theory/20 - Informational Layer/20.0 - Symbolic Structure/20.0.8 - Ontological States/20.0.8 - Ontological States (index).md
@@ -2,7 +2,7 @@
 type: index
 tags:
   - "#layer/information"
-  - "#status/seed"
+  - "#status/stable"
   - "#function/observation"
 ---
 
@@ -12,19 +12,45 @@ tags:
 
 ---
 
-## States
+## States Framework
 
-| State | One‑liner |
-|---|---|
-| [[Ontologically Connected]] | Interfaces open; paths exist; exterior observed as Field |
-| [[Ontologically Disconnected]] | Interfaces closed; no path; exterior observed as Void |
+| State | Description | Key Test |
+|----------|-------------|----------|
+| [[Ontologically Connected]] | Interfaces open | Path check |
+| [[Ontologically Disconnected]] | Interfaces closed | Block test |
+
+Each state provides:
+- Technical and humane test criteria
+- Scale-dependent manifestations
+- State transition patterns
+- Stability conditions
 
 ---
 
-## See Also
+## Core References
 
-- Interfaces: [[Field]] · [[Void]]
-- Relations: [[20.0.7 - Structural Relations (index)]]
-- Propagation: [[20.0.4 - Propagation Patterns (index)]]
-- Diagnostics: [[20.0.1 - Form Classifications (index)]] · [[20.0.2 - Field Classifications (index)]] · [[20.0.3 - Awareness Classifications (index)]] · [[20.0.6 - Stability Diagnostics (index)]]
+Primitives:
+- [[Form]]
+- [[Field]]
+- [[Void]]
 
+Anchors:
+- [[ε — Difference Resolution Quantum (constant)]]
+- [[π — Closure Geometry Ratio (constant)]]
+- [[e — Natural Transformation Rate (constant)]]
+- [[φ — Asymmetric Stabilization Ratio (constant)]]
+- [[c — Difference Propagation Limit (constant)]]
+
+Modulators:
+- [[∇S — Structure Differentiation Gradient (Sarkisian)]]
+- [[λV — Void Resonance Threshold (Volozhina)]]
+- [[ψA — Awareness Phase Coherence Anchor (Aiza)]]
+
+Related Patterns:
+- [[20.0.1 - Form Classifications (index)]]
+- [[20.0.2 - Field Classifications (index)]]
+- [[20.0.3 - Awareness Classifications (index)]]
+- [[20.0.4 - Propagation Patterns (index)]]
+- [[20.0.5 - Interaction Dynamics (index)]]
+- [[20.0.6 - Stability Diagnostics (index)]]
+- [[20.0.7 - Structural Relations (index)]]
